@@ -1,3 +1,8 @@
+2019-04-24  Jakub Jelinek  <jakub@redhat.com>
+
+	PR tree-optimization/90211
+	* gcc.dg/autopar/pr90211.c: New test.
+
 2019-04-23  Iain Buclaw  <ibuclaw@gdcproject.org>
 	    Robin Dapp  <rdapp@linux.ibm.com>
 
